tooling/nargo_cli/tests/snapshots/execution_success/traits_in_crates_2/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : [_1]",
    "return value indices : []",
    "EXPR [ (1, _0) (-1, _1) 10 ]"
  ],
  "debug_symbols": "jZBNCoMwEIXvMmsXieLGq5QiMY4SCEkYE6GId+8opuqipav5efPNg7dAj10aW+MGP0HzWKAjY60ZW+u1isY73i5rAXlsIyHyCi46U0ERugiNS9YWMCub9qMpKLfXqIhVUQC6nis/HIzFrVuLkxbfUSmqA5byxOvyxssfvPzwZX3y8m//ss58Vd38nzwpbeiWGAhotrNZkVGdxSPFITl9CTW+QlZy7IG8xj4Rbu92jQ3e",
  "file_map": {
    "52": {
      "source": "use crate1::MyTrait;\n\nfn main(x: Field, y: pub Field) {\n    let mut V = crate2::MyStruct { Q: x };\n    V.Add10();\n    assert(V.Q == y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
